--- a/assets/sass/navigation/_main-nav.scss
+++ b/assets/sass/navigation/_main-nav.scss
@@ -1,6 +1,10 @@
 
 #main-nav{
   width: 100%;
+  position: absolute;
+  top: 45px;
+  left: 0;
+  z-index:9999;
 
   &.scrolled{
     filter: blur(20px);
